0.4.6 (10/??/2012):
-------------------

- Changed default "scanfor" option from internal-external-optical to
  internal-external-optical-manual. This will have no effect with the
  standard refind.conf file, which has no manual stanzas defined; but some
  users seem to overlook this setting, and think that adding manual stanzas
  is enough to activate them. This will make it so.

- Added new legacy (BIOS) boot support for UEFI-based PCs.

0.4.5 (8/12/2012):
------------------

- Fixed bug that caused a failure to boot BIOS-based OSes on Macs.

- Fixed bug in install.sh that caused it to fail to detect rEFItBlesser.

0.4.4 (6/23/2012):
------------------

- Fixed bug that caused filesystem labels to be corrupted by rEFInd on
  32-bit systems.

- Fixed bug that caused filesystem labels to be truncated in the drivers
  on 32-bit systems.

- Fixed bug in use_graphics_for option parsing that caused most options
  to set graphics mode for OS X and/or Linux but not other boot
  loaders/OSes.

- Tweaked install script to better isolate the ESP under OS X.

0.4.3 (6/21/2012):
------------------

- rEFInd now supports compilation using the TianoCore UDK2010/EDK2
  development kit in addition to GNU-EFI.

- Added new "use_graphics_for" option to control which OSes to boot in
  graphics mode. (This effect lasts for a fraction of a second on most
  systems, since the boot loader that rEFInd launches is likely to set
  graphics or text mode itself.)

- Graphics-mode booting now clears the screen to the current rEFInd
  background color (rather than black) and does NOT display boot messages.
  The intent is for a smoother transition when booting OS X, or perhaps
  other OSes that don't display boot loader messages. In practice, this
  effect will be tiny for many OSes, since the boot loader generally clears
  the screen within a fraction of a second of being launched; but the
  "flicker" of a rEFInd message in that time can sometimes be distracting.
